--- a/Elevators v2/.settings/org.eclipse.core.resources.prefs
+++ b/Elevators v2/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/com/pecacheu/elevators/Conf.java=UTF-8
+encoding//src/com/pecacheu/elevators/Main.java=UTF-8
 encoding//src/com/pecacheu/elevators/config.yml=UTF-8
